@@ -68,15 +68,17 @@
     "settingsLanguage": "Language",
     "settingsCategoryPosition": "Category position",
     "settingsLocationPosition": "Location position",
-    "settingsNotifications": "Notifications",
+    "settingsSettings": "Settings",
     "settingsNotificationsTitle": "Notification service",
     "settingsNotificationsSubtitle": "Open notification permission menus",
     "settingsNotificationsAndroidText": "When notification service is enabled, Troško will trigger when you receive a notification from banking apps.",
     "settingsNotificationsiOSText": "Due to limitations in the operating system, the notification service is not available on iOS devices.",
-    "settingsMaps": "Maps",
     "settingsMapsTitle": "Vector maps",
     "settingsMapsSubtitle": "Modern way of displaying maps",
     "settingsMapsText": "Vector maps are higher quality, but graphically more complex to display.",
+    "settingsIconsTitle": "Colorful icons",
+    "settingsIconsSubtitle": "Use icons with color",
+    "settingsIconsText": "Category icons and all others used throughout the app.",
     "settingsAccountManagement": "Account management",
     "settingsName": "Name",
     "settingsNameText": "Here you can change the name of your user.",
