@@ -68,15 +68,17 @@
     "settingsLanguage": "Jezik",
     "settingsCategoryPosition": "Pozicija kategorija",
     "settingsLocationPosition": "Pozicija lokacija",
-    "settingsNotifications": "Obavijesti",
+    "settingsSettings": "Postavke",
     "settingsNotificationsTitle": "Usluga obavijesti",
     "settingsNotificationsSubtitle": "Otvori izbornike dopuštenja obavijesti",
     "settingsNotificationsAndroidText": "Kad je usluga obavijesti omogućena, Troško se aktivira ako primiš obavijest od bankarskih aplikacija.",
     "settingsNotificationsiOSText": "Zbog ograničenja operativnog sustava, usluga obavijesti nije moguća na iOS uređajima.",
-    "settingsMaps": "Karte",
     "settingsMapsTitle": "Vektorske karte",
     "settingsMapsSubtitle": "Moderan način prikaza karata",
     "settingsMapsText": "Vektorske karte su kvalitetnije, ali grafički kompleksnije za prikaz.",
+    "settingsIconsTitle": "Šarene ikone",
+    "settingsIconsSubtitle": "Koristi ikone u boji",
+    "settingsIconsText": "Ikone kategorija i sve ostale korištene kroz aplikaciju.",
     "settingsAccountManagement": "Upravljanje računom",
     "settingsName": "Ime",
     "settingsNameText": "Ovdje možeš promijeniti ime korisnika.",
