@@ -84,15 +84,17 @@ class CodegenLoader extends AssetLoader{
   "settingsLanguage": "Language",
   "settingsCategoryPosition": "Category position",
   "settingsLocationPosition": "Location position",
-  "settingsNotifications": "Notifications",
+  "settingsSettings": "Settings",
   "settingsNotificationsTitle": "Notification service",
   "settingsNotificationsSubtitle": "Open notification permission menus",
   "settingsNotificationsAndroidText": "When notification service is enabled, Troško will trigger when you receive a notification from banking apps.",
   "settingsNotificationsiOSText": "Due to limitations in the operating system, the notification service is not available on iOS devices.",
-  "settingsMaps": "Maps",
   "settingsMapsTitle": "Vector maps",
   "settingsMapsSubtitle": "Modern way of displaying maps",
   "settingsMapsText": "Vector maps are higher quality, but graphically more complex to display.",
+  "settingsIconsTitle": "Colorful icons",
+  "settingsIconsSubtitle": "Use icons with color",
+  "settingsIconsText": "Category icons and all others used throughout the app.",
   "settingsAccountManagement": "Account management",
   "settingsName": "Name",
   "settingsNameText": "Here you can change the name of your user.",
@@ -216,15 +218,17 @@ static const Map<String,dynamic> _hr = {
   "settingsLanguage": "Jezik",
   "settingsCategoryPosition": "Pozicija kategorija",
   "settingsLocationPosition": "Pozicija lokacija",
-  "settingsNotifications": "Obavijesti",
+  "settingsSettings": "Postavke",
   "settingsNotificationsTitle": "Usluga obavijesti",
   "settingsNotificationsSubtitle": "Otvori izbornike dopuštenja obavijesti",
   "settingsNotificationsAndroidText": "Kad je usluga obavijesti omogućena, Troško se aktivira ako primiš obavijest od bankarskih aplikacija.",
   "settingsNotificationsiOSText": "Zbog ograničenja operativnog sustava, usluga obavijesti nije moguća na iOS uređajima.",
-  "settingsMaps": "Karte",
   "settingsMapsTitle": "Vektorske karte",
   "settingsMapsSubtitle": "Moderan način prikaza karata",
   "settingsMapsText": "Vektorske karte su kvalitetnije, ali grafički kompleksnije za prikaz.",
+  "settingsIconsTitle": "Šarene ikone",
+  "settingsIconsSubtitle": "Koristi ikone u boji",
+  "settingsIconsText": "Ikone kategorija i sve ostale korištene kroz aplikaciju.",
   "settingsAccountManagement": "Upravljanje računom",
   "settingsName": "Ime",
   "settingsNameText": "Ovdje možeš promijeniti ime korisnika.",
